--- a/Server/admin.html
+++ b/Server/admin.html
@@ -4,15 +4,16 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hashmancer Admin</title>
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap" rel="stylesheet">
 <style>
-body { font-family: Arial, sans-serif; margin: 10px; background:#111; color:#eee; }
-h1 { color:#ffcc00; text-align:center; }
+body { font-family: Arial, sans-serif; margin: 10px; background:#000; color:#0f0; }
+h1 { color:#0f0; text-align:center; font-family:'UnifrakturCook', cursive; }
 section { margin-bottom:1.2em; }
 table { width:100%; border-collapse:collapse; margin-top:0.5em; }
-th,td { border:1px solid #555; padding:4px; text-align:center; }
-input, textarea, select { background:#222; color:#eee; border:1px solid #555; }
+th,td { border:1px solid #0f0; padding:4px; text-align:center; }
+input, textarea, select { background:#111; color:#0f0; border:1px solid #0f0; }
 button { margin-top:4px; }
-pre { background:#222; padding:5px; overflow:auto; max-height:200px; }
+pre { background:#111; color:#0f0; padding:5px; overflow:auto; max-height:200px; }
 </style>
 </head>
 <body>
