Add Open Glyph button to portal

--- a/Server/portal.html
+++ b/Server/portal.html
@@ -50,6 +50,7 @@ body::before {
 </head>
 <body>
 <h1>Hashmancer Portal</h1>
+<button onclick="location.href='/glyph'">Open Glyph</button>
 <div id="login-overlay">
   <h2>Portal Login</h2>
   <input type="password" id="passkey" placeholder="passkey">
